# TFG

./: .gitignore  Makefile  README.md  generate_pdf.sh  package.json  setup.cfg  time_collection.csv
code/: Dockerfile  app.py  db_test.db  m.py  main.py  pyproject.toml  readme.md  requirements.txt
code/config/: db.py  general_config.py  settings.py
code/dao/: base_dao.py
code/graphql_services/: graph_types.py  graphql_mutation.py  graphql_mutations.py  graphql_resolver.py  grapql_types.py
code/managers/: graphic_manager.py  predictor_manager.py  utils.py
code/models/: decease_model.py  disease_model.py  exceptions.py  raziel_model.py  small_models.py
code/models/openapi_models/: models.py
code/repositories/: abstract_repository.py  ccaa_repository.py  cie_repository.py  creator.py  decease_repository.py  disease_reopsitory.py  disease_repository.py  gedad_repository.py  raziel_repository.py  vars_repository.py
code/server/: base_model.py  disease_model.py  raziel_model.py
code/services/: disease_service.py  graphic_manager.py  managers_service.py  predictor_manager.py  utils.py
code/test/: model_test.py
code/tests/: base_dao_test.py  conftest.py  test_base_dao.py  test_ccaas_repository.py  test_decease_model.py  test_decease_repositories.py  test_disease.py  test_disease_model.py  test_disease_repositories.py  test_functions.py  test_gedad_repository.py  test_graphic_manager.py  test_mock_creator.py  test_model.py  test_predictor.py  test_raziel.py  test_raziel_model.py  test_raziel_repositories.py  test_services.py
code/tests/data/: ccaas.csv  (+4 more)
(+43 files in other folders)
