[tool.poetry]
name = "TFG-API"
version = "0.1.0"
description = ""
authors = ["pablojjimenez <pablojjimenez0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
prophet = "^1.0.1"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
lint = "flake8 --statistics"
serve = "uvicorn app:app --reload"